[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentid"
version = "0.1.2"
description = "A lightweight manifest and CLI for AI agent identity, JIT authority, policy, and audit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentID contributors" }]
dependencies = ["PyYAML>=6.0.1"]

[project.scripts]
agentid = "agentid.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentid*"]
